fix(world-map-calculator): display truncated progress

--- a/src/view/components/world-map-calculator/style.css
+++ b/src/view/components/world-map-calculator/style.css
@@ -11,11 +11,6 @@ world-map-select {
   margin: 1em 1em;
 }
 
-.calc-result {
-  display: inline-block;
-  width: 8em;
-}
-
 input[type="number"] {
   max-width: 6em;
 }
